[Day13] 마무리. 수업 한 번 더 들으며 설명 보충